--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
             <div class="swiper h-full w-full">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide relative">
-                        <div class="absolute inset-0 bg-cover bg-center hidden md:block" style="background-image: url('img/Slider1.png');"></div>
+                        <div class="absolute inset-0 bg-cover bg-center hidden md:block" style="background-image: url('img/slider1.png');"></div>
                         <div class="absolute inset-0 bg-cover bg-center block md:hidden" style="background-image: url('img/slider1movil.png');"></div>
                         <div class="w-full h-full flex items-center justify-center relative z-10 bg-white-900 bg-opacity-30">
                             <div class="text-center max-w-3xl mx-auto px-6">
@@ -405,7 +405,7 @@
                         </div>
                     </div>
                     <div class="swiper-slide relative">
-                        <div class="absolute inset-0 bg-cover bg-center hidden md:block" style="background-image: url('img/Slider2.png');"></div>
+                        <div class="absolute inset-0 bg-cover bg-center hidden md:block" style="background-image: url('img/slider2.png');"></div>
                         <div class="absolute inset-0 bg-cover bg-center block md:hidden" style="background-image: url('img/slider2movil.png');"></div>
                         <div class="w-full h-full flex items-center justify-center relative z-10 bg-white-900 bg-opacity-30">
                             <div class="text-center max-w-3xl mx-auto px-6">
@@ -422,7 +422,7 @@
                         </div>
                     </div>
                     <div class="swiper-slide relative">
-                        <div class="absolute inset-0 bg-cover bg-center hidden md:block" style="background-image: url('img/Slider3.png');"></div>
+                        <div class="absolute inset-0 bg-cover bg-center hidden md:block" style="background-image: url('img/slider3.png');"></div>
                         <div class="absolute inset-0 bg-cover bg-center block md:hidden" style="background-image: url('img/slider3movil.png');"></div>
                         <div class="w-full h-full flex items-center justify-center relative z-10 bg-white-900 bg-opacity-30">
                             <div class="text-center max-w-3xl mx-auto px-6">
