--- a/contacto/index.html
+++ b/contacto/index.html
@@ -263,18 +263,18 @@
                         <div class="glass-box">
                             <h3 class="text-2xl font-bold text-white mb-6">Información de Contacto</h3>
                             <div class="space-y-4 text-lg">
-                                <a href="tel:5644636321" class="flex items-center gap-4 group">
+                                <a href="tel:5593311394" class="flex items-center gap-4 group">
                                     <svg class="contact-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M2.25 6.75c0 8.284 6.716 15 15 15h2.25a2.25 2.25 0 002.25-2.25v-1.372c0-.516-.351-.966-.852-1.091l-4.423-1.106c-.44-.11-.902.055-1.173.417l-.97 1.293c-2.827-1.47-5.02-3.664-6.49-6.49l1.293-.97c.363-.271.527-.734.417-1.173L6.351 3.102c-.125-.501-.613-.852-1.091-.852H3.975A2.25 2.25 0 001.725 4.5v2.25z" /></svg>
-                                    <span class="text-white group-hover:text-[#ae0747] transition-colors">56 4463 6321</span>
+                                    <span class="text-white group-hover:text-[#ae0747] transition-colors">Soporte: 55 9331 1394</span>
                                 </a>
                                 
-                                <a href="https://wa.me/5593311394" target="_blank" class="flex items-center gap-4 group">
+                                <a href="https://wa.me/5644636321" target="_blank" class="flex items-center gap-4 group">
                                     <svg class="contact-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M8.625 9.75a.375.375 0 11-.75 0 .375.375 0 01.75 0zm0 0H8.25m4.125 0a.375.375 0 11-.75 0 .375.375 0 01.75 0zm0 0H12m4.125 0a.375.375 0 11-.75 0 .375.375 0 01.75 0zm0 0h-.375M21 12a9 9 0 11-18 0 9 9 0 0118 0zM5.25 12a.75.75 0 00-1.5 0v.008c0 .414.336.75.75.75h.008a.75.75 0 00.75-.75V12zm1.5 0a.75.75 0 00-1.5 0v.008c0 .414.336.75.75.75h.008a.75.75 0 00.75-.75V12zm1.5 0a.75.75 0 00-1.5 0v.008c0 .414.336.75.75.75h.008a.75.75 0 00.75-.75V12zm1.5 0a.75.75 0 00-1.5 0v.008c0 .414.336.75.75.75h.008a.75.75 0 00.75-.75V12z" /></svg>
-                                    <span class="text-white group-hover:text-[#ae0747] transition-colors">WhatsApp: 559 331 1394</span>
+                                    <span class="text-white group-hover:text-[#ae0747] transition-colors">WhatsApp: 56 4463 6321</span>
                                 </a>
-                                <a href="mailto:contacto@awantechnology.mx" class="flex items-center gap-4 group">
-                                    <svg class="contact-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M21.75 6.75v10.5a2.25 2.25 0 01-2.25 2.25h-15a2.25 2.25 0 01-2.25-2.25V6.75m19.5 0A2.25 2.25 0 0019.5 4.5h-15a2.25 2.25 0 00-2.25 2.25m19.5 0v.243a2.25 2.25 0 01-1.07 1.916l-7.5 4.615a2.25 2.25 0 01-2.36 0L3.32 8.91a2.25 2.25 0 01-1.07-1.916V6.75" /></svg>
-                                    <span class="text-white group-hover:text-[#ae0747] transition-colors">contacto@awantechnology.mx</span>
+                                <a href="tel:5644636321" class="flex items-center gap-4 group">
+                                    <svg class="contact-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M2.25 6.75c0 8.284 6.716 15 15 15h2.25a2.25 2.25 0 002.25-2.25v-1.372c0-.516-.351-.966-.852-1.091l-4.423-1.106c-.44-.11-.902.055-1.173.417l-.97 1.293c-2.827-1.47-5.02-3.664-6.49-6.49l1.293-.97c.363-.271.527-.734.417-1.173L6.351 3.102c-.125-.501-.613-.852-1.091-.852H3.975A2.25 2.25 0 001.725 4.5v2.25z" /></svg>
+                                    <span class="text-white group-hover:text-[#ae0747] transition-colors">Ventas: 56 4463 6321</span>
                                 </a>
                             </div>
                         </div>
@@ -356,27 +356,29 @@
         </div>
     </footer>
 
-    <!-- Floating Chat Bubble & Modal -->
-    <div class="fixed bottom-5 right-5 z-50">
-        <div x-show="chatOptionsOpen" class="chat-bubble-options absolute bottom-16 right-0 mb-2 w-60 bg-[#ae0747] rounded-lg shadow-xl py-2" @click.outside="chatOptionsOpen = false" x-cloak>
-            <button @click="isChatOpen = true; chatOptionsOpen = false" class="flex items-center w-full text-left px-4 py-2 text-sm text-white hover:bg-[#840033]">Asistente Virtual</button>
+        <div class="hidden md:flex flex-col space-y-4 fixed left-4 top-1/2 -translate-y-1/2 z-20">
+            <a href="https://www.facebook.com/profile.php?id=61571012665827" class="p-2 hover:scale-110 transition-transform">
+                <img src="img/facebook.png" alt="Facebook" class="w-6 h-6">
+            </a>
+            <a href="https://www.instagram.com/internetparaelbienestar/" class="p-2 hover:scale-110 transition-transform">
+                <img src="img/instagram.png" alt="Instagram" class="w-6 h-6">
+            </a>
         </div>
-        <button @click="chatOptionsOpen = !chatOptionsOpen" class="bg-[#ffffff] hover:bg-[#f0f0f0] text-[#ae0747] rounded-full p-4 shadow-lg transition transform hover:scale-110 focus:outline-none">
-            <svg x-show="!chatOptionsOpen" class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 10h.01M12 10h.01M16 10h.01M9 16H5a2 2 0 01-2-2V6a2 2 0 012-2h14a2 2 0 012 2v8a2 2 0 01-2 2h-5l-5 5v-5z"></path></svg>
-            <svg x-show="chatOptionsOpen" class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path></svg>
-        </button>
-    </div>
-    <div x-show="isChatOpen" class="chat-modal-container fixed inset-0 flex items-start justify-center pt-20 p-4 z-[100]" x-cloak>
-        <div class="chat-modal-overlay fixed inset-0" @click="isChatOpen = false"></div>
-        <div id="chat-modal" class="chat-modal-content bg-[#2C3333] rounded-lg shadow-xl w-full max-w-lg p-6 flex flex-col">
-            <div class="flex justify-between items-center mb-4">
-                <h3 class="text-xl font-bold text-[#ffffff] title-outline">Asistente Virtual</h3>
-                <button @click="isChatOpen = false" class="text-gray-400 hover:text-white">&times;</button>
-            </div>
-             <div id="chatbox" class="flex-grow"><p class="message-bot"><strong>Agente:</strong> ¡Hola! ¿En qué puedo ayudarte?</p></div>
-             <div class="flex items-center mt-4"><input type="text" id="userInput" placeholder="Escribe..." class="flex-grow mr-2"><button id="chat-button" onclick="sendMessage()">Enviar</button></div>
-         </div>
-    </div>
+        
+        <div class="md:hidden flex justify-center items-center space-x-6 fixed bottom-0 left-0 right-0 bg-[#681b32] bg-opacity-50 backdrop-blur-sm p-3 z-20">
+            <a href="https://www.facebook.com/profile.php?id=61571012665827" class="p-2">
+                <img src="img/facebook.png" alt="Facebook" class="w-6 h-6">
+            </a>
+            <a href="https://www.instagram.com/internetparaelbienestar/" class="p-2">
+                <img src="img/instagram.png" alt="Instagram" class="w-6 h-6">
+        </div>
+
+    <!-- Floating Chat Bubble (WHATSAPP DIRECTO) -->
+    <a href="https://wa.me/5215644636321" target="_blank" class="fixed bottom-5 right-5 z-50 bg-[#25D366] hover:bg-[#128C7E] text-white rounded-full p-4 shadow-lg transition transform hover:scale-110 focus:outline-none flex items-center justify-center">
+        <svg class="w-8 h-8" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+            <path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.008-.57-.008-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893a11.821 11.821 0 00-3.48-8.413Z"/>
+        </svg>
+    </a>
 
     <script>
         // Scripts de Chat y Scroll
