--- a/telefonia_simcard/index.html
+++ b/telefonia_simcard/index.html
@@ -338,7 +338,7 @@
             </h3>
             <div class="flex flex-wrap justify-center gap-6">
                 <!-- Mercado Libre -->
-                <a href="https://listado.mercadolibre.com.mx/cool-mobile" target="_blank" class="bg-white hover:bg-gray-100 transition-all duration-300 transform hover:-translate-y-1 rounded-2xl p-6 shadow-xl flex items-center justify-center w-64 h-24 group border-2 border-transparent hover:border-[#FFE600]">
+                <a href="https://www.mercadolibre.com.mx/pagina/awaw7651146?item_id=MLM4427564376&category_id=MLM6576&seller_id=1032424934&client=recoview-selleritems&recos_listing=true" target="_blank" class="bg-white hover:bg-gray-100 transition-all duration-300 transform hover:-translate-y-1 rounded-2xl p-6 shadow-xl flex items-center justify-center w-64 h-24 group border-2 border-transparent hover:border-[#FFE600]">
                     <img src="img/mercado-libre-logo.png" 
                          alt="Mercado Libre" 
                          class="h-10 object-contain group-hover:scale-110 transition-transform duration-300">
@@ -536,27 +536,12 @@
                 <img src="img/instagram.png" alt="Instagram" class="w-6 h-6">
         </div>
 
-    <!-- Floating Chat Bubble -->
-    <div class="fixed bottom-5 right-5 z-50">
-        <div x-show="chatOptionsOpen" class="chat-bubble-options absolute bottom-16 right-0 mb-2 w-60 bg-[#2E4F4F] rounded-lg shadow-xl py-2" @click.outside="chatOptionsOpen = false" x-cloak>
-            <button @click="isChatOpen = true; chatOptionsOpen = false" class="flex items-center w-full text-left px-4 py-2 text-sm text-white hover:bg-[#0E8388]">Asistente Virtual</button>
-        </div>
-        <button @click="chatOptionsOpen = !chatOptionsOpen" class="bg-[#ffffff] hover:bg-[#f0f0f0] text-[#ae0747] rounded-full p-4 shadow-lg transition transform hover:scale-110 focus:outline-none">
-            <svg x-show="!chatOptionsOpen" class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 10h.01M12 10h.01M16 10h.01M9 16H5a2 2 0 01-2-2V6a2 2 0 012-2h14a2 2 0 012 2v8a2 2 0 01-2 2h-5l-5 5v-5z"></path></svg>
-            <svg x-show="chatOptionsOpen" class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path></svg>
-        </button>
-    </div>
-    <div x-show="isChatOpen" class="chat-modal-container fixed inset-0 flex items-start justify-center pt-20 p-4 z-[100]" x-cloak>
-        <div class="chat-modal-overlay fixed inset-0" @click="isChatOpen = false"></div>
-        <div id="chat-modal" class="chat-modal-content bg-[#2C3333] rounded-lg shadow-xl w-full max-w-lg p-6 flex flex-col">
-            <div class="flex justify-between items-center mb-4">
-                <h3 class="text-xl font-bold text-[#57C5B6] title-outline">Asistente Virtual</h3>
-                <button @click="isChatOpen = false" class="text-gray-400 hover:text-white">&times;</button>
-            </div>
-             <div id="chatbox" class="flex-grow"><p class="message-bot"><strong>Agente:</strong> ¡Hola! ¿En qué puedo ayudarte?</p></div>
-             <div class="flex items-center mt-4"><input type="text" id="userInput" placeholder="Escribe..." class="flex-grow mr-2"><button id="chat-button" onclick="sendMessage()">Enviar</button></div>
-         </div>
-    </div>
+    <!-- Floating Chat Bubble (WHATSAPP DIRECTO) -->
+    <a href="https://wa.me/5215644636321" target="_blank" class="fixed bottom-5 right-5 z-50 bg-[#25D366] hover:bg-[#128C7E] text-white rounded-full p-4 shadow-lg transition transform hover:scale-110 focus:outline-none flex items-center justify-center">
+        <svg class="w-8 h-8" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+            <path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.008-.57-.008-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893a11.821 11.821 0 00-3.48-8.413Z"/>
+        </svg>
+    </a>
 
     <!-- SCRIPT DEL MAPA (CORREGIDO: USANDO NOMINATIM GRATIS) -->
     <script>var mapInstanceMovil;</script>
