--- a/faqs/index.html
+++ b/faqs/index.html
@@ -254,22 +254,84 @@
                         Recargas
                     </a>
                     <div class="lg:hidden flex items-center">
-                        <button @click="openMenu = !openMenu" type="button" class="inline-flex items-center justify-center p-2 rounded-md text-white hover:text-white hover:bg-gray-900 focus:outline-none"> 
+                        <!-- AQUÍ ESTÁ EL CAMBIO: text-white CAMBIADO A text-[#840033] -->
+                        <button @click="openMenu = !openMenu" type="button" class="inline-flex items-center justify-center p-2 rounded-md text-[#840033] hover:text-[#ae0747] hover:bg-gray-100 focus:outline-none"> 
                             <span class="sr-only">Abrir menú principal</span>
-                            <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <svg class="h-6 w-6" x-show="!openMenu" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path>
+                            </svg>
+                            <svg class="h-6 w-6" x-show="openMenu" x-cloak fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
                             </svg>
                         </button>
                     </div>
                 </div>
             </div>
+
             <!-- Mobile Menu -->
-            <div x-show="openMenu" x-cloak class="lg:hidden fixed inset-0 bg-[#691b32] z-40 pt-20 px-4">
-               <div class="absolute top-4 right-4">
-                   <button @click="openMenu = false" class="text-white"><svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path></svg></button>
-               </div>
-               <a href="/telefonia_simcard/" class="block py-2 text-white border-b border-white/20">Telefonía</a>
-               <a href="/recargas/" class="block py-2 text-white border-b border-white/20">Recargas</a>
+            <div x-show="openMenu" x-cloak class="lg:hidden fixed inset-0 bg-[#691b32] z-40"
+                 x-transition:enter="transition ease-out duration-200"
+                 x-transition:enter-start="opacity-0 scale-95"
+                 x-transition:enter-end="opacity-100 scale-100"
+                 x-transition:leave="transition ease-in duration-150"
+                 x-transition:leave-start="opacity-100 scale-100"
+                 x-transition:leave-end="opacity-0 scale-95">
+                <div class="px-2 pt-20 pb-3 space-y-1 sm:px-3">
+                    <div class="absolute top-4 right-4">
+                        <button @click="openMenu = false" type="button" class="inline-flex items-center justify-center p-2 rounded-md text-white hover:text-white hover:bg-gray-700 focus:outline-none">
+                            <span class="sr-only">Cerrar menú</span>
+                            <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
+                            </svg>
+                        </button>
+                    </div>
+                    <!-- Mobile Links (simplificados) -->
+                     <div x-data="{ openTelefonia: false, openConsulta: false, openContacto: false }">
+                    <!-- Telefonía -->
+                    <button @click="openTelefonia = !openTelefonia" 
+                            class="w-full flex justify-between items-center px-3 py-2 rounded-md text-base font-medium text-white hover:bg-[#4f0c13]">
+                        <span>Telefonía</span>
+                        <svg class="w-5 h-5 transition-transform" :class="{'rotate-180': openTelefonia}" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path>
+                        </svg>
+                    </button>
+                    <div x-show="openTelefonia" x-cloak class="pl-6 space-y-1">
+                        <a href="/telefonia_simcard/" class="block px-3 py-2 text-sm text-[#c9b08b] hover:bg-[#4f0c13]">Telefonia-simcard</a>
+                        <a href="/promociones/" class="block px-3 py-2 text-sm text-[#c9b08b] hover:bg-[#4f0c13]">Promociones</a>
+                    </div>
+
+                    <!-- Consulta -->
+                    <button @click="openConsulta = !openConsulta" 
+                            class="w-full flex justify-between items-center px-3 py-2 rounded-md text-base font-medium text-white hover:bg-[#4f0c13]">
+                        <span>Consulta</span>
+                    <svg class="w-5 h-5 transition-transform" :class="{'rotate-180': openConsulta}" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path>
+                    </svg>
+                </button>
+                <div x-show="openConsulta" x-cloak x-transition class="pl-6 space-y-1">
+                    <a href="portabilidad/" class="block px-3 py-2 text-sm text-[#c9b08b] hover:bg-[#4f0c13]">Portabilidad</a>
+                    <a href="compatibilidad/" class="block px-3 py-2 text-sm text-[#c9b08b] hover:bg-[#4f0c13]">Compatibilidad</a>
+                </div>
+                <!-- contacto -->
+                <button @click="openContacto = !openContacto" 
+                        class="w-full flex justify-between items-center px-3 py-2 rounded-md text-base font-medium text-white hover:bg-[#4f0c13]">
+                    <span>Contacto</span>
+                    <svg class="w-5 h-5 transition-transform" :class="{'rotate-180': openContacto}" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path>
+                    </svg>
+                </button>
+                <div x-show="openContacto" x-cloak x-transition class="pl-6 space-y-1">
+                    <a href="/faqs/" class="block px-3 py-2 text-sm text-[#c9b08b] hover:bg-[#4f0c13]">Faqs</a>
+                    <a href="/contacto/" class="block px-3 py-2 text-sm text-[#c9b08b] hover:bg-[#4f0c13]">Contacto</a>
+                </div>
+            </div>
+            </div>
+                    <div class="pt-4 border-t border-[#4f0c13]">
+                        <a href="https://crmxpace.com/coolmobile/recargas-stripe" class="block text-center bg-[#840033] hover:bg-[#4f0c13] text-white font-bold py-3 px-6 rounded-full w-full">
+                            Recargas
+                        </a>
+                    </div>
+                </div>
             </div>
         </header>
 
