--- a/portabilidad/index.html
+++ b/portabilidad/index.html
@@ -357,8 +357,8 @@
                     </svg>
                 </button>
                 <div x-show="openConsulta" x-cloak x-transition class="pl-6 space-y-1">
-                    <a href="portabilidad/" class="block px-3 py-2 text-sm text-[#c9b08b] hover:bg-[#4f0c13]">Portabilidad</a>
-                    <a href="compatibilidad/" class="block px-3 py-2 text-sm text-[#c9b08b] hover:bg-[#4f0c13]">Compatibilidad</a>
+                    <a href="/portabilidad/" class="block px-3 py-2 text-sm text-[#c9b08b] hover:bg-[#4f0c13]">Portabilidad</a>
+                    <a href="/compatibilidad/" class="block px-3 py-2 text-sm text-[#c9b08b] hover:bg-[#4f0c13]">Compatibilidad</a>
                 </div>
                 <!-- contacto -->
                 <button @click="openContacto = !openContacto" 
