--- a/promociones/index.html
+++ b/promociones/index.html
@@ -113,7 +113,7 @@
                                 <svg class="w-4 h-4 ml-1 transform" :class="{ 'rotate-180': open }" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg>
                             </button>
                             <div x-show="open" x-cloak x-transition class="absolute top-full left-0 mt-2 w-48 bg-[#ffffff] rounded-md shadow-lg py-1 z-40">
-                                <a href="/portabilidad/index.html" class="block px-4 py-2 text-sm hover:bg-[#c9a7aa]">Portabilidad</a>
+                                <a href="/portabilidad/" class="block px-4 py-2 text-sm hover:bg-[#c9a7aa]">Portabilidad</a>
                                 <a href="/compatibilidad/" class="block px-4 py-2 text-sm hover:bg-[#c9a7aa]">Compatibilidad</a>
                             </div>
                         </div>
@@ -187,8 +187,8 @@
                     </svg>
                 </button>
                 <div x-show="openConsulta" x-cloak x-transition class="pl-6 space-y-1">
-                    <a href="portabilidad/" class="block px-3 py-2 text-sm text-[#c9b08b] hover:bg-[#4f0c13]">Portabilidad</a>
-                    <a href="compatibilidad/" class="block px-3 py-2 text-sm text-[#c9b08b] hover:bg-[#4f0c13]">Compatibilidad</a>
+                    <a href="/portabilidad/" class="block px-3 py-2 text-sm text-[#c9b08b] hover:bg-[#4f0c13]">Portabilidad</a>
+                    <a href="/compatibilidad/" class="block px-3 py-2 text-sm text-[#c9b08b] hover:bg-[#4f0c13]">Compatibilidad</a>
                 </div>
                 <!-- contacto -->
                 <button @click="openContacto = !openContacto" 
